# Cascade

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dagster_project.yaml  docker-compose.yml  pyproject.toml  settings.py  test_clob.py  test_polymarket.py
.github/workflows/: ci.yml
dashboard/: app.py
detect/: bocd.py
features/: indices.py
ingest/: capability_scraper.py  google_trends.py  legislation.py  news_pixels.py  polymarket.py
tests/: test_chrome.py  test_ingest.py
